# imdb_automation

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_app.sh  test_pipeline.py
.github/workflows/: sync_to_hf.yml
backend/: auth.py  barcode.py  batch_processor.py  db.py  email_service.py  extractor.py  image_aggregation.py  normalizer.py  pipeline.py  schema.py  utils.py  video_processor.py
core/emails/: batch_complete.j2  password_reset.j2
core/prompts/: vlm_extraction_prompt.j2  vlm_system_prompt.j2  vlm_video_extraction_prompt.j2  vlm_video_system_prompt.j2
core/ui/: app_styling.j2
docs/: extraction_improvements.md  model_selection.md  submission.md
eval/: metrics.py  predictions_anthropic_v6.csv  predictions_anthropic_v7.csv  predictions_gpt55_v6.csv  run_eval.py  run_eval_batch.py
eval/archive/: predictions.csv  predictions_anthropic_v1.csv  predictions_anthropic_v1_partial.csv  predictions_anthropic_v2.csv  predictions_anthropic_v2_country_fix.csv  predictions_anthropic_v3.csv  predictions_anthropic_v4.csv  predictions_anthropic_v5.csv  predictions_brand_fix_test.csv  predictions_flavor_fix_test.csv  predictions_gemini35_flash.csv  predictions_gemini_flash.csv  predictions_gpt55.csv  predictions_gpt55_v2.csv  predictions_gpt55_v3.csv  predictions_gpt55_v5.csv  predictions_gpt55_v6.csv  predictions_manufacturer_fix_test.csv  predictions_qwen32b.csv  predictions_qwen32b_v2.csv  predictions_targeted_v4.csv  (+4 more)
frontend/: app.py  auth_pages.py  components.py  handlers.py  info_page.py  state.py  styles.py  tour.py  utils.py
